{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 117,
  "lineage": "841ee25e-5504-68fe-c5d2-b4e5cd852198",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c12a3ba1fe4ac6a1",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-03c36e13f350f42fd",
            "domain": "vpc",
            "id": "eipalloc-0c12a3ba1fe4ac6a1",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ddd4cd87965a095a",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-15-207-65-170.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.65.170",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.TerraformWebServer",
            "aws_security_group.TerraformSecurityGroup",
            "aws_subnet.Subnet1",
            "aws_vpc.NewVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_ec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09298640a92b2d12c",
            "arn": "arn:aws:ec2:ap-south-1:058264119498:instance/i-04ad39fb6ca3e9a84",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ad39fb6ca3e9a84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ddd4cd87965a095a"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ddd4cd87965a095a",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "15.207.65.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-083954280386871c6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096c64e5cb7fefe2a",
            "tags": {
              "Name": "Linux-Instance"
            },
            "tags_all": {
              "Name": "Linux-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-072c435780b6a1da9"
            ]
          },
          "dependencies": [
            "aws_network_interface.TerraformWebServer",
            "aws_security_group.TerraformSecurityGroup",
            "aws_subnet.Subnet1",
            "aws_vpc.NewVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264119498:internet-gateway/igw-047c46461fa589f1f",
            "id": "igw-047c46461fa589f1f",
            "owner_id": "058264119498",
            "tags": {
              "Name": "Terraform IGW"
            },
            "tags_all": {
              "Name": "Terraform IGW"
            },
            "vpc_id": "vpc-0d0fa801e03796d57"
          },
          "dependencies": [
            "aws_vpc.NewVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "TerraformWebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264119498:network-interface/eni-0ddd4cd87965a095a",
            "id": "eni-0ddd4cd87965a095a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e8:f6:5c:a8:75",
            "owner_id": "058264119498",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-072c435780b6a1da9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096c64e5cb7fefe2a"
          },
          "dependencies": [
            "aws_security_group.TerraformSecurityGroup",
            "aws_subnet.Subnet1",
            "aws_vpc.NewVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264119498:route-table/rtb-07528b65b4f7a2d28",
            "id": "rtb-07528b65b4f7a2d28",
            "owner_id": "058264119498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047c46461fa589f1f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-Route Table"
            },
            "tags_all": {
              "Name": "Terraform-Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0fa801e03796d57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.NewVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Terraform_RT_Acc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c32788b90c4ec1c",
            "route_table_id": "rtb-07528b65b4f7a2d28",
            "subnet_id": "subnet-096c64e5cb7fefe2a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform_Route_Table",
            "aws_subnet.Subnet1",
            "aws_vpc.NewVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TerraformSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264119498:security-group/sg-072c435780b6a1da9",
            "description": "allowing web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072c435780b6a1da9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "058264119498",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow all"
            },
            "tags_all": {
              "Name": "Allow all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0fa801e03796d57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.NewVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264119498:subnet/subnet-096c64e5cb7fefe2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096c64e5cb7fefe2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264119498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform Subnet 1"
            },
            "tags_all": {
              "Name": "Terraform Subnet 1"
            },
            "vpc_id": "vpc-0d0fa801e03796d57"
          },
          "dependencies": [
            "aws_vpc.NewVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "NewVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264119498:vpc/vpc-0d0fa801e03796d57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05dc91d2937adc9f4",
            "default_route_table_id": "rtb-06536b71be70a0bd7",
            "default_security_group_id": "sg-049f4eeeb572bf453",
            "dhcp_options_id": "dopt-04b1cf9f16f6f9c04",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0fa801e03796d57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06536b71be70a0bd7",
            "owner_id": "058264119498",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    }
  ]
}